--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -34,8 +34,8 @@ $black-color: #000000 !default;
 
 // Theme colors
 
-$code-bg-color-light: rgba($purple-color, 0.05);
-$code-bg-color-dark: #2c3237 !default;
+$code-bg-color-light: rgb(39, 116, 174);
+$code-bg-color-dark: rgb(255, 208, 0) !default;
 
 // Font awesome location
 $fa-font-path: "../webfonts";
