update to env 7

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,8 +9,8 @@
 $red-color: #ff3636 !default;
 $red-color-dark: #b71c1c !default;
 $orange-color: #f29105 !default;
-$blue-color: #2774AE !default;
-$blue-color-dark: #00369f !default;
+$blue-color: #3064ff !default;
+$blue-color-dark: #0039ab !default;
 $cyan-color:rgb(255, 208, 0)  !default; // #2698ba
 $light-cyan-color: color.adjust($cyan-color, $lightness: 25%);
 $green-color: #00ab37 !default;
